# FramePit

./: .gitignore  README.md  pyproject.toml
django_app/django_app/: settings.py  urls.py
django_app/main/: urls.py  views.py
django_app/main/templates/main/: home.html
django_app/rooms/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
django_app/rooms/migrations/: 0002_tag.py  0003_room_image.py  0004_room_members_room_tags_alter_room_image_and_more.py
django_app/rooms/templates/rooms/: room_create.html  room_delete.html  room_detail.html  room_update.html
django_app/templates/: base.html
django_app/users/: forms.py  models.py  urls.py  views.py
django_app/users/migrations/: 0001_initial.py  0004_remove_profile_image_path_profile_image.py  0005_alter_profile_image.py
django_app/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  profile_delete.html  profile_detail.html  profile_update.html
